Fix header images on IE. Fixed label positions on pricing page in small screens.

--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -7,6 +7,8 @@
 @import "compass/typography/text/replacement";
 @import "compass/utilities/color/contrast";
 @import "compass/css3/images";
+@import "compass/css3/background-size";
+@import "compass/css3/border-radius";
 
 /* --------------------------------------------------
    Table of Contents
@@ -64,14 +66,14 @@ body {
 
 header {
   h1 {
-    @include replace-text('title-text.png');
-    background-size: 95% 95%;
+    @include replace-text('logo.png');
+    @include background-size(100% 100%);
     height: ms(10);
   }
   hgroup {
-    @include replace-text('other-text-500.png');
+    @include replace-text('logo-desc.png');
     height: ms(10);
-    background-size: 95% 95%;
+    @include background-size(100% 100%);
   }
 }
 
@@ -210,6 +212,16 @@ article.pricing {
             top: 25px;
           }
         }
+        @include respondTo(smallScreen){
+          top: 110px;
+          height: 100px;
+          width: 100px;
+          @include border-radius(50px);
+          p {
+            font-size: 14px;
+            line-height: 0.6;
+          }
+        }
       }
     }
     .info {
@@ -226,7 +238,7 @@ article.pricing {
 /* -----------------------------------------
    Gallery Page
 ----------------------------------------- */
-#featured { background: url(spinner.gif) center center #f4f4f4; height: 300px; }
+#featured { background: image-url('foundation/orbit/loading.gif') center center #f4f4f4; height: 300px; }
 #featured img { display: none; }
 
 #featured.orbit { background: none; }
